syntax = "proto3";

package com.hn;
import "google/protobuf/empty.proto";

option java_multiple_files = true;

message User {
    string fullName = 1;
    string username = 2;
    string itemType = 3;
}


service UserService{

    //unary - synchronous - ham goi dong bo
    //client will send one request and server will response with one response
    rpc getUser(User) returns(User){}

    //server-streaming - asynchronous - bat dong bo
    //client will send one request and server will response with stream of message to the client
    rpc getAllUser(google.protobuf.Empty) returns(stream User){}

    //client-streaming - asynchronous
    //client will send stream of message and server will response with one response
    rpc getShortestNameUser(stream User) returns(User){}

    //bi-directional streaming -asynchronous
    //client will send stream of message and server will response with stream of message to the client
    rpc updateUsernameByFullName(stream User) returns(stream User){}
}